--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.1.0</version>
 	</parent>
 	<artifactId>rj-context</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>jar</packaging>
 
 	<name>rj-context</name>
